Fri May  2 11:25:36 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>

	* Big patch from Remi Bonnet on the automapper.

	* po/*.po: Updated.

Wed Apr  9 14:22:59 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* Makefile.am: Install desktop file in the freedesktop compliant
	directory.

	* configure.ac: Unquoted GETTEXT_PACKAGE.

Mon Apr  7 15:59:36 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>

	* configure.ac: Changed gtetrinet to gnome-mud :)

Fri Apr  4 19:19:37 IST 2003  Naba Kumar   <naba@gnome.org>

	* src/keybinding.c(keybind_button_add_clicked_cb): Fixed a memory leak.
	Fixed a crash bug due to inappropriate looping of KEYBIND_DATA list
	in a for loop (crash occurs when we try to add the second keybinding).
	
	* src/gnome-mud.h(main): Calls gnome_init() before
	gconf_client_get_default() (and fixes a crash bug).
	
	* src/data.c(data_button_add): Fixed a crash bug (which occurs
	when we try to add the second trigger definition). The argument
	to the strdupv() should be a NULL terminated -- added third item
	in list[] and set it to NULL.
	
Sat Apr  5 00:14:55 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: Define and substitute GETTEXT_PACKAGE.
	
	* src/prefs.c (window_prefs): Added missing mnemonic.

Thu Apr  3 19:53:42 CEST 2003  Jordi Mallach  <jordi@sindominio.net>

	* gnome-mud.schemas.in: Typo and style fixes.

	* src/prefs.c (window_prefs): Reword some tooltips.
	Add mnemonics to preferences.
	
	* src/init.c (window_menu_help_about): Unmark author names for
	translation, as they have no non-ASCII characters.
	
	[help_menu]: Change help items to GNOME_APP_UI_ITEM.
	(window_menu_help_manual_activate_cb): New function, launch User
	Manual help.
	(window_menu_plugin_api_manual_activate_cb): Likewise, for Plugin API.

Wed Apr  2 15:23:34 CEST 2003  Robin Ericsson  <lobbin@localhost.nu>

	* Fixed #623355.

	* gnome-mud.schemas.in: Added key connection_list.

	* src/gnome-mud.h [wizard_data]: Removed.
